; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/core/extr_control.c_snd_ctl_remove_id.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/core/extr_control.c_snd_ctl_remove_id.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_card = type { i32 }
%struct.snd_ctl_elem_id = type { i32 }
%struct.snd_kcontrol = type { i32 }

@ENOENT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @snd_ctl_remove_id(%struct.snd_card* %0, %struct.snd_ctl_elem_id* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.snd_card*, align 8
  %5 = alloca %struct.snd_ctl_elem_id*, align 8
  %6 = alloca %struct.snd_kcontrol*, align 8
  %7 = alloca i32, align 4
  store %struct.snd_card* %0, %struct.snd_card** %4, align 8
  store %struct.snd_ctl_elem_id* %1, %struct.snd_ctl_elem_id** %5, align 8
  %8 = load %struct.snd_card*, %struct.snd_card** %4, align 8
  %9 = getelementptr inbounds %struct.snd_card, %struct.snd_card* %8, i32 0, i32 0
  %10 = call i32 @down_write(i32* %9)
  %11 = load %struct.snd_card*, %struct.snd_card** %4, align 8
  %12 = load %struct.snd_ctl_elem_id*, %struct.snd_ctl_elem_id** %5, align 8
  %13 = call %struct.snd_kcontrol* @snd_ctl_find_id(%struct.snd_card* %11, %struct.snd_ctl_elem_id* %12)
  store %struct.snd_kcontrol* %13, %struct.snd_kcontrol** %6, align 8
  %14 = load %struct.snd_kcontrol*, %struct.snd_kcontrol** %6, align 8
  %15 = icmp eq %struct.snd_kcontrol* %14, null
  br i1 %15, label %16, label %22

16:                                               ; preds = %2
  %17 = load %struct.snd_card*, %struct.snd_card** %4, align 8
  %18 = getelementptr inbounds %struct.snd_card, %struct.snd_card* %17, i32 0, i32 0
  %19 = call i32 @up_write(i32* %18)
  %20 = load i32, i32* @ENOENT, align 4
  %21 = sub nsw i32 0, %20
  store i32 %21, i32* %3, align 4
  br label %30

22:                                               ; preds = %2
  %23 = load %struct.snd_card*, %struct.snd_card** %4, align 8
  %24 = load %struct.snd_kcontrol*, %struct.snd_kcontrol** %6, align 8
  %25 = call i32 @snd_ctl_remove(%struct.snd_card* %23, %struct.snd_kcontrol* %24)
  store i32 %25, i32* %7, align 4
  %26 = load %struct.snd_card*, %struct.snd_card** %4, align 8
  %27 = getelementptr inbounds %struct.snd_card, %struct.snd_card* %26, i32 0, i32 0
  %28 = call i32 @up_write(i32* %27)
  %29 = load i32, i32* %7, align 4
  store i32 %29, i32* %3, align 4
  br label %30

30:                                               ; preds = %22, %16
  %31 = load i32, i32* %3, align 4
  ret i32 %31
}

declare dso_local i32 @down_write(i32*) #1

declare dso_local %struct.snd_kcontrol* @snd_ctl_find_id(%struct.snd_card*, %struct.snd_ctl_elem_id*) #1

declare dso_local i32 @up_write(i32*) #1

declare dso_local i32 @snd_ctl_remove(%struct.snd_card*, %struct.snd_kcontrol*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
